# rftrace

./: .gitignore  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml
examples/basic/: Cargo.toml
examples/basic/.cargo/: config
examples/basic/src/: main.rs
examples/c/: .gitignore  main.c  makefile  out.snap
examples/hermitc/: .gitignore  main.c  makefile
examples/hermitc/example_trace/: example.sym  info  sid-00.map  task.txt  trace.json
examples/hermitrust/: .gitignore  Cargo.toml  makefile
examples/hermitrust/example_trace/: info  sid-00.map  task.txt  test.sym  trace.json
examples/hermitrust/src/: main.rs
examples/rust/: Cargo.toml  out.snap
examples/rust/src/: main.rs
patches/: uftrace-use-tsc.patch  virtiofsd-no-namespacing.patch
rftrace/: .gitignore  Cargo.toml  build.rs
rftrace-frontend/: Cargo.toml  README.md
rftrace-frontend-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  generate_bindings.sh  rftrace_frontend_ffi.h
rftrace-frontend-ffi/src/: lib.rs
rftrace-frontend/src/: frontend.rs  interface.rs  lib.rs
rftrace/src/: backend.rs  interface.rs  lib.rs  thread_local.c
rftrace/staticlib/: Cargo.nottoml  Cargo.toml
src/: backend.rs  frontend.rs  interface.rs  lib.rs  trace.rs
staticlib/: Cargo.toml
tools/: create_fake_uftrace.py  merge.py  poor_mans_profiler_gdb.py  poor_mans_profiler_lldb.py  setup_kvm_tracing.sh
