[package]
name = "rftrace"
version = "0.1.0"
authors = ["Thomas Lambertz <mail@thomaslambertz.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

[features]
default = ["frontend"]

# controlls whether the stdlib is build with cargo -Z build-std=core
buildstd = ["backend"]
backend = []
hermit = ["buildstd"] # sets some defaults, so no env-vars are needed.
frontend = ["byteorder"]

[lib]
crate-type = ['rlib']

[dependencies]
byteorder = {version="1.3.2", optional = true}