[workspace]
members = [
    "rftrace-frontend",
    "rftrace-frontend-ffi",
    "examples/rust",
    "examples/hermitrust",
]
exclude = [
    "rftrace",
    # re-define workspace here, else we get issues with sub-compiling libhermit-rs in the target folder of a workspace!
    # needed only for examples/hermitrust
    "target",
]
