[package]
name = "rftrace-frontend-ffi"
version = "0.1.0"
authors = ["Thomas Lambertz <mail@thomaslambertz.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"

keywords = ["tracing", "function", "uftrace", "mcount", "instrumentation"]
categories = ["development-tools::profiling"]
description = "Default rftracer frontend as a static library so it can be called from C code."
readme = "README.md"
repository = "https://github.com/tlambertz/rftrace"

[lib]
crate-type = ["staticlib"]

[dependencies]
rftrace-frontend = {path="../rftrace-frontend", version="0.1"}
