[package]
name = "rftrace-frontend"
version = "0.1.0"
authors = [
    "Martin Kröning <mkroening@posteo.net>",
    "Thomas Lambertz <mail@thomaslambertz.de>",
]
license = "MIT OR Apache-2.0"
edition = "2018"

keywords = ["tracing", "function", "uftrace", "mcount", "instrumentation"]
categories = ["development-tools::profiling"]
description = "Rftracer frontend for writing uftrace compatible traces."
readme = "README.md"
repository = "https://github.com/hermit-os/rftrace"

[lib]
crate-type = ['rlib']

[dependencies]
byteorder = "~1.3.2"
cfg-if = "1"
