[package]
name = "rftrace"
version = "0.1.0"
authors = ["Thomas Lambertz <mail@thomaslambertz.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

[features]
buildcore = [] # Build core, needed when compiling against a kernel-target, such as x86_64-unknown-hermit-kernel.
autokernel = [] # convenience flag, which specifies compilation target as `x86_64-unknown-hermit-kernel` when orignal target is `x86_64-unknown-hermit`
interruptsafe = [] # backup and restore all scratch registers in the mcount_return trampoline. Needed if we instrument interrupt routines

default = ['interruptsafe']

[lib]
crate-type = ['staticlib', 'rlib']

#[profile.dev]
#panic = "abort"
# # we have to build with at least opt-level 1. Might aswell do always 3, since mcount() is in the hotpath!
#opt-level = 3

#[profile.release]
#panic = "abort"
#opt-level = 3