[package]
name = "rftrace"
version = "0.2.0"
authors = ["Thomas Lambertz <mail@thomaslambertz.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

keywords = ["tracing", "function", "uftrace", "mcount", "instrumentation"]
categories = ["no-std", "development-tools::profiling"]
description = "Function tracer backend. Logs all functions entries and exits. Works on all software compiled with mcount() instrumentation."
readme = "README.md"
repository = "https://github.com/tlambertz/rftrace"

include = [
    "**/*.rs",
    "Cargo.toml",
    "staticlib/Cargo.nottoml",
]


[features]
buildcore = [] # Build core, needed when compiling against a kernel-target, such as x86_64-unknown-none-hermitkernel.
autokernel = [] # convenience flag, which specifies compilation target as `x86_64-unknown-none-hermitkernel` when orignal target is `x86_64-unknown-hermit`
interruptsafe = [] # backup and restore all scratch registers in the mcount_return trampoline. Needed if we instrument interrupt routines

default = ['interruptsafe']

[lib]
crate-type = ['staticlib', 'rlib']

#[profile.dev]
#panic = "abort"
# # we have to build with at least opt-level 1. Might aswell do always 3, since mcount() is in the hotpath!
#opt-level = 3

#[profile.release]
#panic = "abort"
#opt-level = 3
