[package]
name = "rftrace"
version = "0.2.2"
authors = [
    "Martin Kröning <mkroening@posteo.net>",
    "Thomas Lambertz <mail@thomaslambertz.de>",
]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

keywords = ["tracing", "function", "uftrace", "mcount", "instrumentation"]
categories = ["no-std", "development-tools::profiling"]
description = "Function tracer backend. Logs all functions entries and exits. Works on all software compiled with mcount() instrumentation."
readme = "README.md"
repository = "https://github.com/hermit-os/rftrace"

include = [
    "**/*.rs",
    "Cargo.toml",
]


[features]
staticlib = []
interruptsafe = [] # backup and restore all scratch registers in the mcount_return trampoline. Needed if we instrument interrupt routines

default = []

[lib]
crate-type = ['staticlib', 'rlib']

[build-dependencies]
llvm-tools = "0.1"

#[profile.dev]
#panic = "abort"
# # we have to build with at least opt-level 1. Might aswell do always 3, since mcount() is in the hotpath!
#opt-level = 3

#[profile.release]
#panic = "abort"
#opt-level = 3
