[package]
name = "tracer-rs-static"
version = "0.1.0"
authors = ["Thomas Lambertz <mail@thomaslambertz.de>"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
staticlib = []

[lib]
crate-type = ['staticlib']
path = "../src/lib.rs"

[profile.dev]
# we have to define at least opt-level 1, else we get duplicate symbols! (runtime_entry, __rust_drop_panic, rust_begin_unwind, rust_panic, ...)
# release profile has default level of 3, dev of 0
opt-level = 1
