[package]
name = "tracer-rs-static"
version = "0.1.0"
authors = ["Thomas Lambertz <mail@thomaslambertz.de>"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
staticlib = []

[lib]
crate-type = ['staticlib']
path = "../src/lib.rs"

[profile.dev]
panic = "abort"
 # we have to build with at least opt-level 1. Might aswell do always 3, since mcount() is in the hotpath!
opt-level = 3

[profile.release]
panic = "abort"
opt-level = 3