[package]
name = "rftrace-rs-test"
version = "0.1.0"
authors = ["Thomas Lambertz <mail@thomaslambertz.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rftrace = {path="../../", features=['frontend', 'backend']}
