[package]
name = "rftrace-hermit-rs-test"
version = "0.1.0"
authors = ["Thomas Lambertz <mail@thomaslambertz.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rftrace = { version = "0.2.0", path="../../rftrace", features=["buildcore","autokernel"] }
rftrace-frontend = { version = "0.1.0", path="../../rftrace-frontend" }


[target.'cfg(target_os = "hermit")'.dependencies]
#hermit-sys = {version="0.1.25", features=["instrument"]}
hermit-sys = {git="https://github.com/tlambertz/rusty-hermit", branch="master", features=["instrument", "with_submodule"]}
#hermit-sys = { path = "../../../rusty-hermit/hermit-sys", features = ["with_submodule", "instrument"] }

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1
