[package]
name = "rftrace-hermit-rs-test"
authors = [
    "Martin Kröning <mkroening@posteo.net>",
    "Thomas Lambertz <mail@thomaslambertz.de>",
]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rftrace = { version = "0.3", path="../../rftrace" }
rftrace-frontend = { version = "0.3", path="../../rftrace-frontend" }

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { version = "0.8" }
