[package]
name = "rftrace-rs-test"
authors = [
    "Martin Kröning <mkroening@posteo.net>",
    "Thomas Lambertz <mail@thomaslambertz.de>",
]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rftrace = { version = "0.2.0", path="../../rftrace" }
rftrace-frontend = { version = "0.1.0", path="../../rftrace-frontend" }
