[package]
name = "rftrace-backend"
version = "0.1.0"
authors = ["Thomas Lambertz <mail@thomaslambertz.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[workspace]

[features]
staticlib = []
interruptsafe = [] # backup and restore all scratch registers in the mcount_return trampoline. Needed if we instrument interrupt routines
reexportsymbols = [] # workaround for rust bug https://github.com/rust-lang/rfcs/issues/2771, needed when linking against c code. DO NOT SET insturment_mcount when enabling this!

[lib]
crate-type = ['staticlib']
path = "../src/lib.rs"

[profile.dev]
panic = "abort"
 # we have to build with at least opt-level 1. Might aswell do always 3, since mcount() is in the hotpath!
opt-level = 3

[profile.release]
panic = "abort"
opt-level = 3